--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 </head>
 <body>
   <h1>稅率反推計算器</h1>
-  <p>請輸入稅後剩餘資源與稅率（%），我會幫你反推原本有多少資源。</p>
+  <p>請輸入稅後剩餘資源與稅率（%）</p>
 
   <input id="after" placeholder="稅後資源，如 1.5m">
   <input id="rate" placeholder="稅率（%），如 30">
